ajout delete media
