# routes/mediaRoutes.js
@@ -4,5 +4,6 @@ const router = express.Router();
 
 router.post('/upload', mediaController.uploadMedia);
 router.get('/all', mediaController.getAllMedia);
+router.delete('/delete', mediaController.deleteMediaByUserId);
 
 module.exports = router;
